trunk/Archive2/77/f06eb4cf55dfee/output
main.cpp:10:5: error: no matching function for call to 'show'
    show(x);
    ^~~~
main.cpp:4:6: note: candidate function not viable: no known conversion from 'int [11]' to 'const int [10]' for 1st argument
void show(const int (&array)[10]) {
     ^
1 error generated.
